# PlanaOS

./: .gitignore  LICENSE  README.md
os/: Cargo.toml  Makefile  build  build.rs
os/.cargo/: config.toml
os/src/: config.rs  console.rs  entry.S  lang_items.rs  link_app.S  linker.ld  loader.rs  logging.rs  main.bak.rs  main.rs  sbi.rs  timer.rs
os/src/boards/: qemu.rs
os/src/index_list/: listdrainiter.rs  listends.rs  listindex.rs  listiter.rs  listnode.rs  mod.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/mutex/: mod.rs  spin_mutex.rs
os/src/sched/: cfs.rs  fifo.rs  mod.rs  prio.rs
os/src/syscall/: mod.rs
os/src/task/: aux.rs  mod.rs
os/src/trap/: irq.rs  mod.rs  trap.S
os/src/utils/: entry_anim.rs  mod.rs
