[package]
name = "os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = 2

[features]
default = []
test = []


[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.10.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4"
xmas-elf = "0.7.0"
bitflags = "2.6.0"
